# sqlviz

./: README.md  pyproject.toml
.github/workflows/: ci.yml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
sqlviz/: __init__.py  cli.py  core.py
sqlviz/sqlviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
