[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlviz"
version = "0.0.1"
description = "A Python library for SQL query visualization with interactive charts using Plotly"
authors = [
    {name = "Sai Krishna", email = "eegasaikrishna@cudabit.live"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["sql", "visualization", "plotly", "data", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Visualization"
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0",
    "sqlalchemy>=1.4",
    "plotly>=5.0",
    "click>=8.0"
]

[tool.mypy]
ignore_missing_imports = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.3",
    "isort>=5.10",
    "mypy>=1.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/sqlviz"
"Repository" = "https://github.com/yourusername/sqlviz"
"Bug Tracker" = "https://github.com/yourusername/sqlviz/issues"

[tool.setuptools.packages.find]
where = ["sqlviz"]

[project.scripts]
sqlviz = "sqlviz.cli:main"
